# src/swagger.json
@@ -318,6 +318,41 @@
           "SensorData"
         ]
       }
+    },
+    "/sensor-data/{id}/presigned-url": {
+      "get": {
+        "operationId": "SensorDataController_getSensorDataPresignedUrl",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetSensorDataPresignedUrlResponse"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "jwt": []
+          }
+        ],
+        "tags": [
+          "SensorData"
+        ]
+      }
     }
   },
   "info": {
@@ -648,6 +683,57 @@
           "activeSensors",
           "createdAt",
           "updatedAt"
+        ]
+      },
+      "GetSensorDataPresignedUrlResponse": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "description": "センサデータID"
+          },
+          "dataName": {
+            "type": "string",
+            "description": "センサデータ名"
+          },
+          "activeSensors": {
+            "type": "string",
+            "description": "有効なセンサ",
+            "enum": [
+              "accelerometer",
+              "linear_acceleration",
+              "gyroscope",
+              "barometer",
+              "magnetometer",
+              "location",
+              "light"
+            ]
+          },
+          "createdAt": {
+            "format": "date-time",
+            "type": "string",
+            "description": "作成日時"
+          },
+          "updatedAt": {
+            "format": "date-time",
+            "type": "string",
+            "description": "更新日時"
+          },
+          "presignedUrls": {
+            "description": "presigned URLs",
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        },
+        "required": [
+          "id",
+          "dataName",
+          "activeSensors",
+          "createdAt",
+          "updatedAt",
+          "presignedUrls"
         ]
       }
     }
